--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-* Protocol_version_header - protocol aware version negotiation
+* Protocol_version_header - protocol-aware version negotiation
 
 Protocol_version_header is a small library that houses magic numbers for various
 protocols. It exposes a =negotiate= function that is magic number aware,
