--- a/README.org
+++ b/README.org
@@ -1,3 +1,4 @@
+#+UUID: 6c9d9407-d5a9-3256-6885-576d2d359887
 * Protocol_version_header - protocol-aware version negotiation
 
 Protocol_version_header is a small library that houses magic numbers for various
